test/multilocale/bradc/assignRemoteConst.good
assignRemoteConst.chpl:1: In function 'foo':
assignRemoteConst.chpl:4: error: cannot assign to const variable
